# Neural_Network

./: CMakeLists.txt  LICENSE  NN.cpp  README.md  a.out  kernels.cu  kernels.h  setup.py
